--- a/Bab2/Materi9.html
+++ b/Bab2/Materi9.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Ibnu Suhaemy|Front End Developer</title>
-		<link rel="stylesheet" type="text/css" href="css/normalize.css"/>
-        <link rel="stylesheet" type="text/css" href="D:\Prakerin\Modul\css\main5.css"/>
-		<link rel="stylesheet" type="text/css" href="D:\Prakerin\Modul\css\responsive.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/normalize.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/main5.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/responsive.css"/>
 		<link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
