--- a/Bab2/Materi9.html
+++ b/Bab2/Materi9.html
@@ -12,7 +12,7 @@
 	<body>
 		<header>
 		  <a href="materi2.html" id="logo">
-			<img src="D:\Prakerin\Modul\Image\logo.png" width="200" height="55">
+			<img src="../Image/logo.png" width="200" height="55">
 		  </a>
 		  <nav>
 			<ul>
@@ -29,46 +29,46 @@
 			<ul id="gallery">
 				<li>
 					<a href="images/1.png">
-						<img src="D:\Prakerin\Modul\Image\1.png" width="270" height="250"/>
+						<img src="../Image/1.png" width="270" height="250"/>
 						<p>Web Master</p>
 					</a>
 				</li>
 				<li>
 					<a href="images/2.png">
-						<img src="D:\Prakerin\Modul\Image\2.png" width="270" height="250"/>
+						<img src="../Image/2.png" width="270" height="250"/>
 						<p>Adobe Photoshop Web Design</p>
 					</a>
 				</li>
 				<li>
 					<a href="images/1.jpg">
-						<img src="D:\Prakerin\Modul\Image\1.jpg" width="270" height="250"/>
+						<img src="../Image/1.jpg" width="270" height="250"/>
 						<p>Web Progamming</p>
 					</a>
 				</li>
 				<li>
 					<a href="images/2.jpg">
-						<img src="D:\Prakerin\Modul\Image\2.jpg" width="270" height="250"/>
+						<img src="../Image/2.jpg" width="270" height="250"/>
 						<p>Mobile Application</p>
 					</a>
 				</li>
 				<li>
 					<a href="images/3.jpg">
-						<img src="D:\Prakerin\Modul\Image\3.jpg" width="270" height="250"/>
+						<img src="../Image/3.jpg" width="270" height="250"/>
 						<p>Graphic Design</p>
 					</a>
 				</li>
 				<li>
 					<a href="images/4.jpg">
-						<img src="D:\Prakerin\Modul\Image\4.jpg" width="270" height="250"/>
+						<img src="../Image/4.jpg" width="270" height="250"/>
 						<p>Flash Animation</p>
 					</a>
 				</li>
 			</ul>
 		</section>
 			<footer>
-					<img src="D:\Prakerin\Modul\Image\fb.jpg" width="35" height="35" class="social-icon">
-					<img src="D:\Prakerin\Modul\Image\twitter.png" width="35" height="35" class="social-icon">
-					<img src="D:\Prakerin\Modul\Image\yahoo.png" width="35" height="35" class="social-icon">
+					<img src="../Image/fb.jpg" width="35" height="35" class="social-icon">
+					<img src="../Image/twitter.png" width="35" height="35" class="social-icon">
+					<img src="../Image/yahoo.png" width="35" height="35" class="social-icon">
 					<p>&copy:2014 Karisma Academy</p>
 			</footer>
 		</div>	
