--- a/Bab2/Materi9.html
+++ b/Bab2/Materi9.html
@@ -11,8 +11,8 @@
 	</head>
 	<body>
 		<header>
-		  <a href=Bab1/"materi2.html" id="logo">
-			<img src="../Image/logo.png" width="200" height="55">
+		  <a href="materi2.html" id="logo">
+			<img src="D:\Prakerin\Modul\Image\logo.png" width="200" height="55">
 		  </a>
 		  <nav>
 			<ul>
@@ -70,7 +70,7 @@
 					<img src="../Image/twitter.png" width="35" height="35" class="social-icon">
 					<img src="../Image/yahoo.png" width="35" height="35" class="social-icon">
 					<p>&copy:2014 Karisma Academy</p>
-			</footer> 
+			</footer>
 		</div>	
 	</body>
 </html>
