--- a/Bab2/Materi9.html
+++ b/Bab2/Materi9.html
@@ -12,7 +12,7 @@
 	<body>
 		<header>
 		  <a href="materi2.html" id="logo">
-			<img src="D:\Prakerin\Modul\Image\logo.png" width="200" height="55">
+			<img src="../Image/logo.png" width="200" height="55">
 		  </a>
 		  <nav>
 			<ul>
