--- a/Bab2/about.html
+++ b/Bab2/about.html
@@ -42,7 +42,7 @@
 				<img src="../Image/twitter.png" width="35" height="35" class="social-icon">
 			</a>
 			<a href="http://www.yahoo.com">
-				<img src="../yahoo.png" width="35" height="35" class="social-icon">
+				<img src="../Image/yahoo.png" width="35" height="35" class="social-icon">
 			</a>
 			<p> &copy; 2014 Karisma Academy </p>
 		</footer>
