--- a/Bab2/about.html
+++ b/Bab2/about.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Ibnu Suhaemy|Front End Developer</title>
-		<link rel="stylesheet" type="text/css" href="css/normalize.css"/>
-        <link rel="stylesheet" type="text/css" href="D:\Prakerin\Modul\css\main5.css"/>
-		<link rel="stylesheet" type="text/css" href="D:\Prakerin\Modul\css\responsive.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/normalize.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/main5.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/responsive.css"/>
 		<link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body>
 		<header>
 		  <a href="materi2.html" id="logo">
-			<img src="D:\Prakerin\Modul\Image\logo.png" width="200" height="55">
+			<img src="../Image/logo.png" width="200" height="55">
 		  </a>
 		  <nav>
 			<ul>
@@ -26,7 +26,7 @@
 		</header>
 	<div id="wrapper">
 		<section>
-			<img src="D:\Prakerin\Modul\Image\pp.png" width="400" height="530" alt="Karisma Academy Profile Photo"
+			<img src="../Image/pp.png" width="400" height="530" alt="Karisma Academy Profile Photo"
 			class="profile-photo">
 			<h3>About</h3>
 				<p>Karisma Academy adalah sebuah lembaga kursus terpercaya yang telah menghasilkan banyak lulusan yang mampu berbicara
@@ -36,13 +36,13 @@
 		</section>
 		<footer>
 			<a href="http://www.facebook.com">
-				<img src="D:\Prakerin\Modul\Image\fb.jpg" width="35" height="35" class="social-icon">
+				<img src="../Image/fb.jpg" width="35" height="35" class="social-icon">
 			</a>
 			<a href="http://www.twitter.com">
-				<img src="D:\Prakerin\Modul\Image\twitter.png" width="35" height="35" class="social-icon">
+				<img src="../Image/twitter.png" width="35" height="35" class="social-icon">
 			</a>
 			<a href="http://www.yahoo.com">
-				<img src="D:\Prakerin\Modul\Image\yahoo.png" width="35" height="35" class="social-icon">
+				<img src="../Image/yahoo.png" width="35" height="35" class="social-icon">
 			</a>
 			<p> &copy; 2014 Karisma Academy </p>
 		</footer>
