--- a/Bab2/Materi9.html
+++ b/Bab2/Materi9.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<header>
-		  <a href="Bab2/materi2.html" id="logo">
+		  <a href="materi2.html" id="logo">
 			<img src="../Image/logo.png" width="200" height="55">
 		  </a>
 		  <nav>
