--- a/Bab2/Materi2.html
+++ b/Bab2/Materi2.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="D:\Prakerin\Modul\Image\logo.png" width="205" height="150" align="center"/>
+			<img src="../Image/logo.png" width="205" height="150" align="center"/>
 		</header>
 		<section>
 			<p>Gallery will go here</p>
