--- a/Bab2/Materi9.html
+++ b/Bab2/Materi9.html
@@ -60,7 +60,7 @@
 				<li>
 					<a href="images/4.jpg">
 						<img src="../Image/4.jpg" width="270" height="250"/>
-						<p>Flash Animation</p>
+						<p>Animation Design</p>
 					</a>
 				</li>
 			</ul>
