--- a/Bab2/Materi9.html
+++ b/Bab2/Materi9.html
@@ -66,11 +66,17 @@
 			</ul>
 		</section>
 			<footer>
-					<img src="../Image/fb.jpg" width="35" height="35" class="social-icon">
-					<img src="../Image/twitter.png" width="35" height="35" class="social-icon">
-					<img src="../Image/yahoo.png" width="35" height="35" class="social-icon">
-					<p>&copy:2014 Karisma Academy</p>
-			</footer>
+			<a href="http://www.facebook.com">
+				<img src="../Image/fb.jpg" width="35" height="35" class="social-icon">
+			</a>
+			<a href="http://www.twitter.com">
+				<img src="../Image/twitter.png" width="35" height="35" class="social-icon">
+			</a>
+			<a href="http://www.yahoo.com">
+				<img src="../Image/yahoo.png" width="35" height="35" class="social-icon">
+			</a>
+			<p> &copy; 2014 Karisma Academy </p>
+		</footer>
 		</div>	
 	</body>
 </html>
