--- a/Bab2/Materi9.html
+++ b/Bab2/Materi9.html
@@ -11,12 +11,12 @@
 	</head>
 	<body>
 		<header>
-		  <a href="materi2.html" id="logo">
+		  <a href="materi9html" id="logo">
 			<img src="../Image/logo.png" width="200" height="55">
 		  </a>
 		  <nav>
 			<ul>
-			 <li><a href="materi2.html" class="selected">Home</a></li>
+			 <li><a href="materi9.html" class="selected">Home</a></li>
 			 <li><a href="about.html">About</a></li>
 			 <li><a href="contact.html">Contact</a></li>
 			</ul>
