--- a/Bab2/Materi9.html
+++ b/Bab2/Materi9.html
@@ -16,7 +16,7 @@
 		  </a>
 		  <nav>
 			<ul>
-			 <li><a href="materi2.html" class="selected">Home</a></li>
+			 <li><a href="materi2html" class="selected">Home</a></li>
 			 <li><a href="about.html">About</a></li>
 			 <li><a href="contact.html">Contact</a></li>
 			</ul>
