--- a/Bab2/contact.html
+++ b/Bab2/contact.html
@@ -11,13 +11,13 @@
 	</head>
 	<body>
 		<header>
-		  <a href="materi2.html" id="logo">
+		  <a href="Materi2.html" id="logo">
 			<img src="../Image/logo.png" width="200" height="55">
 		  </a>
 		  <nav>
 			<ul>
 			<center>
-			 <li><a href="materi2.html">Home</a></li>
+			 <li><a href="Materi2.html">Home</a></li>
 			 <li><a href="about.html">About</a></li>
 			 <li><a href="contact.html" class="selected">Contact</a></li>
 			 </center>
