--- a/Bab2/Materi9.html
+++ b/Bab2/Materi9.html
@@ -26,37 +26,37 @@
 		<section>
 			<ul id="gallery">
 				<li>
-					<a href="images/1.png">
+					<a href="../Image/1.png">
 						<img src="../Image/1.png" width="270" height="250"/>
 						<p>Web Master</p>
 					</a>
 				</li>
 				<li>
-					<a href="images/2.png">
+					<a href="../Image/2.png">
 						<img src="../Image/2.png" width="270" height="250"/>
 						<p>Adobe Photoshop Web Design</p>
 					</a>
 				</li>
 				<li>
-					<a href="images/1.jpg">
+					<a href="../Image/1.jpg">
 						<img src="../Image/1.jpg" width="270" height="250"/>
 						<p>Web Progamming</p>
 					</a>
 				</li>
 				<li>
-					<a href="images/2.jpg">
+					<a href="../Image/2.jpg">
 						<img src="../Image/2.jpg" width="270" height="250"/>
 						<p>Mobile Application</p>
 					</a>
 				</li>
 				<li>
-					<a href="images/3.jpg">
+					<a href="../Image/3.jpg">
 						<img src="../Image/3.jpg" width="270" height="250"/>
 						<p>Graphic Design</p>
 					</a>
 				</li>
 				<li>
-					<a href="images/4.jpg">
+					<a href="../Image/4.jpg">
 						<img src="../Image/4.jpg" width="270" height="250"/>
 						<p>Animation Design</p>
 					</a>
